<?xml version="1.0"?>
<package format="3">
  <name>pca9685_ros2</name>
  <version>0.0.1</version>
  <description>ROS2 interface for the PCA9685 servo controller</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtype>ament_python</buildtype>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>