<?xml version="1.0"?>
<package format="3">
  <name>pca9685_ros2</name>
  <version>0.0.1</version>
  <description>ROS2 interface for the PCA9685 servo controller</description>
  <maintainer email="chrisvaisnor@gmail.com">Chris Vaisnor</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>adafruit-circuitpython-servokit</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>